--- a/Server/Views/home.hbs
+++ b/Server/Views/home.hbs
@@ -159,6 +159,7 @@
                                         <button type="button" class="btn btn-secondary"
                                             data-dismiss="modal">Huỷ</button>
                                         <button type="submit" class="btn btn-primary">Sửa</button>
+                                    </div>
                                 </form>
                             </div>
                         </div>
@@ -210,6 +211,7 @@
                                 </select>
                             </div>
                             <button type="submit" class="btn btn-primary">Thêm</button>
+                        </div>
                     </form>
                 </div>
             </div>
