--- a/Server/Views/screenHome.hbs
+++ b/Server/Views/screenHome.hbs
@@ -234,7 +234,7 @@
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify({
-                to: 'ExponentPushToken[sNvUaVDQyEQ21M2aVt60nz]',
+                to: 'ExponentPushToken[l9_Yr-DKiVXVowKIC5pO_D]',
                 title: 'ShopBipBip',
                 body: 'Hello'
             })
