--- a/Server/Views/login.hbs
+++ b/Server/Views/login.hbs
@@ -71,13 +71,13 @@
                     <div class="col-lg-7 bg-white p-4">
                         <h1 class="text-center font-weight-bold text-primary">Sign in to Account</h1>
                         <hr class="my-3" />
-                        <form action="/login" method="POST" class="px-3" id="login-form">
+                        <form action="/web/login" method="POST" class="px-3" id="login-form">
                             <div class="input-group input-group-lg form-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text rounded-0"><i
                                             class="far fa-envelope fa-lg fa-fw"></i></span>
                                 </div>
-                                <input type="email" id="username" name="email" class="form-control rounded-0"
+                                <input type="email" id="username" name="username" class="form-control rounded-0"
                                     placeholder="E-Mail" required />
                             </div>
                             <div class="input-group input-group-lg form-group">
@@ -130,13 +130,13 @@
                     <div class="col-lg-7 bg-white p-4">
                         <h1 class="text-center font-weight-bold text-primary">Create Account</h1>
                         <hr class="my-3" />
-                        <form action="#" method="post" class="px-3" id="register-form">
+                        <form action="/web/register" method="post" class="px-3" id="register-form">
                             <div class="input-group input-group-lg form-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text rounded-0"><i
                                             class="far fa-user fa-lg fa-fw"></i></span>
                                 </div>
-                                <input type="text" id="name" name="name" class="form-control rounded-0"
+                                <input type="text" id="name" name="fullname" class="form-control rounded-0"
                                     placeholder="Full Name" required />
                             </div>
                             <div class="input-group input-group-lg form-group">
@@ -144,7 +144,7 @@
                                     <span class="input-group-text rounded-0"><i
                                             class="far fa-envelope fa-lg fa-fw"></i></span>
                                 </div>
-                                <input type="email" id="remail" name="email" class="form-control rounded-0"
+                                <input type="email" id="remail" name="username" class="form-control rounded-0"
                                     placeholder="E-Mail" required />
                             </div>
                             <div class="input-group input-group-lg form-group">
@@ -160,7 +160,7 @@
                                     <span class="input-group-text rounded-0"><i
                                             class="fas fa-key fa-lg fa-fw"></i></span>
                                 </div>
-                                <input type="password" id="cpassword" name="cpassword" class="form-control rounded-0"
+                                <input type="password" id="cpassword" name="repassword" class="form-control rounded-0"
                                     minlength="5" placeholder="Confirm Password" required />
                             </div>
                             <div class="form-group">
