--- a/Server/Views/product_detail.hbs
+++ b/Server/Views/product_detail.hbs
@@ -40,7 +40,7 @@
 
                 <li class="nav-item">
                     <a class="nav-link active position-relative" aria-current="page"
-                       href="" style="color: black">
+                       href="/home" style="color: black">
                         Đơn Hàng
 
                     </a>
@@ -85,7 +85,7 @@
 
     <div style=" padding: 15px;margin: auto;">
         <h4>Bảng màu:</h4>
-        
+
             <table class="table table-bordered">
                 <thead>
                 <tr>
@@ -356,8 +356,8 @@
                     </div>
                 </div>
             </div>
-        
-        
+
+
     </div>
 
 </div>
