--- a/Server/Views/screenMessger.hbs
+++ b/Server/Views/screenMessger.hbs
@@ -167,7 +167,7 @@
                     <span class="block p-2">Admin</span>
                 </div>
                 <div class="right md:w-1/4 sm:w-2/3 flex  justify-content-end ">
-                    <img src="message.png" class="w-7 h-7 bg-gray-100 rounded-full p-1 mx-2 my-4 cursor-pointer" alt="">
+                    <!--<img src="message.png" class="w-7 h-7 bg-gray-100 rounded-full p-1 mx-2 my-4 cursor-pointer" alt="">-->
                 </div>
             </div>
         </div>
